--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.28.1
 pyaudio==0.2.11
 SpeechRecognition==3.10.0
 transformers==4.35.0
-torch==2.1.0
+torch
 gTTS==2.4.0
 groq==0.4.1
 numpy==1.24.3
